tests/lex-fail/num_bin_eof.fl.0.exp
Error: num_bin_eof.fl(1,1): Missing base-2 integer literal digits 
0b
^  
